--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
        <input type='radio' id='met' value='metar' name='same' checked='true'></input>
        <label for='taf'>TAF</label>
        <input type='radio' id='taf' value='taf' name='same'></input>
+
+       <label for='awc'>AWC</label>
+       <input type='checkbox' id='awc' checked='true'></input>
+       <label for='cwx'>CWX</label>
+       <input type='checkbox' id='cwx'></input>
     </div>
     <div class='d3'>
        <p>AWC</p>
