--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Weather Service</title>
 </head>
-<body oncontextmenu='return false'>
+<body>
     <div id='d1'>
        <input type='text' id='inp' placeholder='Enter Airport Id'></input>
        <button onclick='get()'> Search </button>
