--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Weather, Forecast, Service, Climate, Data, Rain, Raining, Snow">
-    <meta name="description" content="Get weather data, current weather and forecast for your location.">
+    <meta name="keywords" content="Aviation, Weather, Forecast, Service, VFR, MVFR, IFR, LIFR, Climate, Data, Rain, Raining, Snow">
+    <meta name="description" content="Get aviation weather data.">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
     <title>Weather Service</title>
@@ -57,7 +57,7 @@
        Condition: <strong></strong> <br>
        Clouds: <strong></strong> <br>
        Raw: <strong></strong> <br>
-       Flight Category: <strong></strong>
+       Flight Category: <strong></strong> <div id='fl'></div>
     </div>
     <script src="script.js"></script>
 <body>
