--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
        Raw: <strong></strong> <br>
        Flight Category: <strong></strong> <div id='fl'></div>
     </div>
+    <footer>
+       Page designed by <a href='//sudipta1254.github.io/linkline'>Sudipto</a> <br>
+       Data provided by
+       <a href='//beta.aviationweather.gov'>AWC</a> &
+       <a href='//checkwxapi.com'>CheckWX</a>
+    </footer>
     <script src="script.js"></script>
 <body>
 </html>
