--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
        Pressure: <strong></strong> <br>
        Condition: <strong></strong> <br>
        Clouds: <strong></strong> <br>
-       Raw: <strong></strong>
+       Raw: <strong></strong> <hr>
     </div>
 
     <div class='d4'>
@@ -57,7 +57,18 @@
        Condition: <strong></strong> <br>
        Clouds: <strong></strong> <br>
        Raw: <strong></strong> <br>
-       Flight Category: <strong></strong> <div id='fl'></div>
+       Flight Category: <strong></strong> <div id='fl'></div> <h1>
+    </div>
+    <div class='d5'>
+        <p></p>
+        Type: <strong></strong> <br>
+        Remark: <strong></strong> <br>
+        Airport: <strong></strong> <br>
+        ICAO Code: <strong></strong> <br>
+        Issued: <strong></strong> <br>
+        Span: <strong></strong> <br>
+        <strong></strong> <br>
+        Raw: <strong></strong> <hr>
     </div>
     <footer>
        Page designed by <a href='//sudipta1254.github.io/linkline'>Sudipto</a> <br>
