--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
        <input type='radio' id='taf' value='taf' name='same'></input>
 
        <label for='awc'>AWC</label>
-       <input type='checkbox' id='awc'></input>
+       <input type='checkbox' id='awc' checked='true'></input>
        <label for='cwx'>CWX</label>
-       <input type='checkbox' id='cwx' checked='true'></input>
+       <input type='checkbox' id='cwx'></input>
     </div>
     <div class='d3'>
        <p>AWC</p>
