--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <title>Weather Service</title>
 </head>
 <body>
+    <div class='header'>
+        <p>METAR & TAF</p>
+    </div>
     <div id='d1'>
        <input type='text' id='inp' placeholder='Enter Airport Id'></input>
        <button onclick='get()'> Search </button>
@@ -57,7 +60,7 @@
        Condition: <strong></strong> <br>
        Clouds: <strong></strong> <br>
        Raw: <strong></strong> <br>
-       Flight Category: <strong></strong> <div id='fl'></div> <h1>
+       Flight Category: <strong></strong> <div id='fl'></div> <hr>
     </div>
     <div class='d5'>
         <p></p>
