--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <strong></strong> <br>
         Raw: <strong></strong> <hr>
     </div>
+    <div class='d6'></div>
     <footer>
        Page designed by <a href='//sudipta1254.github.io/linkline'>Sudipto</a> <br>
        Data provided by
