--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Aviation, Weather, Forecast, Service, VFR, MVFR, IFR, LIFR, Climate, Data, Rain, Raining, Snow">
+    <meta name="keywords" content="Aviation, Weather, Forecast, Service, AWC, CheckWX, API, VFR, MVFR, IFR, LIFR, Climate, Data, Rain, Raining, Snow">
     <meta name="description" content="Get aviation weather data.">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
     <div id='d1'>
        <div class='tooltip'>
            <input type='text' id='inp' placeholder='Enter Airport Id'>
-              <span class="tooltiptext" id="myTooltip">Enter hours followed by ICAO to get history 'AAAA5'</span>
+              <span class="tooltiptext" id="myTooltip">Enter ICAO followed by hours to get history 'AAAA5'</span>
            </input>
        </div>
        <button onclick='get()'> Search </button>
