--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Aviation, Weather, Forecast, Service, AWC, CheckWX, API, VFR, MVFR, IFR, LIFR, Climate, Data, Rain, Raining, Snow">
     <meta name="description" content="Get aviation weather data.">
+    <script src="https://kit.fontawesome.com/a26a0964b9.js" crossorigin="anonymous"></script>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
     <title>Weather Service</title>
 </head>
 <body>
     <div class='header'>
-        <p>METAR & TAF</p>
+        <p>METAR & TAF
+            <span class="fa-solid fa-certificate fa-1x spin" style="color: #0095ff;"></span>
+        </p>
     </div>
     <div id='d1'>
        <div class='tooltip'>
