--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Weather Service</title>
 </head>
-<body>
+<body oncontextmenu='return false'>
     <div class='header'>
         <p>METAR & TAF
             <span class="fa-solid fa-certificate fa-1x spin" style="color: #0095ff;"></span>
