--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p>METAR & TAF
             <span class="fa-solid fa-certificate fa-1x spin" style="color: #0095ff;"></span>
         </p>
+        <span class="fa-solid fa-info" onclick="info()"></span>
     </div>
     <div id='d1'>
        <div class='tooltip'>
