--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/a26a0964b9.js" crossorigin="anonymous"></script>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <title>Weather Service</title>
+    <title>AviaWeather</title>
 </head>
 <body oncontextmenu='return false'>
     <div class='header'>
