--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
     </div>
     <div id='d2'>
        <label for='met'>METAR</label>
-       <input type='radio' id='met' value='metar' name='same' checked='true'></input>
+       <input type='radio' id='met' value='metar' name='same' checked='true'>
        <label for='taf'>TAF</label>
-       <input type='radio' id='taf' value='taf' name='same'></input>
+       <input type='radio' id='taf' value='taf' name='same'>
 
        <label for='awc'>AWC</label>
-       <input type='checkbox' id='awc' checked='true'></input>
+       <input type='checkbox' id='awc' checked='true'>
        <label for='cwx'>CWX</label>
-       <input type='checkbox' id='cwx'></input>
+       <input type='checkbox' id='cwx'>
+       <input type='color' onchange='accent()'>
     </div>
     <div class='d3'>
        <p>AWC</p>
