--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     </div>
     <div id='d2'>
        <label for='met'>METAR</label>
-       <input type='radio' id='met' value='metar' name='same' checked='true'>
+       <input type='radio' id='met' value='metar' name='same' checked>
        <label for='taf'>TAF</label>
        <input type='radio' id='taf' value='taf' name='same'>
 
        <label for='awc'>AWC</label>
-       <input type='checkbox' id='awc' checked='true'>
+       <input type='checkbox' id='awc' checked>
        <label for='cwx'>CWX</label>
        <input type='checkbox' id='cwx'>
        <input type='color' onchange='accent()'>
