--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </div>
     <div id='d2'>
        <label for='met'>METAR</label>
-       <input type='radio' id='met' value='metar' name='same' checked>
+       <input type='radio' id='metar' name='same' checked>
        <label for='taf'>TAF</label>
-       <input type='radio' id='taf' value='taf' name='same'>
+       <input type='radio' id='taf' name='same'>
 
        <label for='awc'>AWC</label>
        <input type='checkbox' id='awc' checked>
