--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
        <button onclick='get()'> Search </button>
     </div>
     <div id='d2'>
-       <label for='met'>METAR</label>
+       <label for='metar'>METAR
        <input type='radio' id='metar' name='same' checked>
-       <label for='taf'>TAF</label>
+       <label for='taf'>TAF
        <input type='radio' id='taf' name='same'>
 
-       <label for='awc'>AWC</label>
+       <label for='awc'>AWC
        <input type='checkbox' id='awc' checked>
-       <label for='cwx'>CWX</label>
+       <label for='cwx'>CWX
        <input type='checkbox' id='cwx'>
     </div>
     <div class='d3'>
