--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id='d1'>
        <div class='tooltip'>
            <input type='text' id='inp' placeholder='Enter Airport Id'>
-              <span class="tooltiptext" id="myTooltip">Enter ICAO followed by hours to get history 'AAAA5'</span>
+              <span class="tooltiptext" id="myTooltip">Enter ICAO followed by hours to get history '[query]2'</span>
            </input>
        </div>
        <button onclick='get()'> Search </button>
