--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 </head>
 <body oncontextmenu='return false'>
     <div class='header'>
-        <p>METAR & TAF
-            <span class="fa-solid fa-certificate fa-1x spin" style="color: #0095ff;"></span>
-        </p>
+        <p>METAR & TAF</p>
         <span class="fa-solid fa-info" onclick="info()"></span>
     </div>
     <div id='d1'>
