--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        Type: <strong></strong> <br>
        Airport: <strong></strong> <br>
        ICAO Code: <strong></strong> <br>
-       Report time: <strong></strong> <br>
+       Reported: <strong></strong> <br>
        Temperature: <strong></strong> <br>
        Dewpoint: <strong></strong> <br>
        Wind: <strong></strong> <br>
@@ -56,7 +56,7 @@
        Type: <strong></strong> <br>
        Airport: <strong></strong> <br>
        ICAO Code: <strong></strong> <br>
-       Report time: <strong></strong> <br>
+       Reported: <strong></strong> <br>
        Temperature: <strong></strong> <br>
        Dewpoint: <strong></strong> <br>
        Humidity: <strong></strong> <br>
