--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
        <input type='checkbox' id='awc' checked>
        <label for='cwx'>CWX
        <input type='checkbox' id='cwx'>
+
+       <label for='info'>INFO</label>
+       <input type='radio' id='info' name='same'>
     </div>
     <div class='d3'>
        <p>AWC</p>
