--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
         Raw: <strong></strong> <hr>
     </div>
     <div class='d6'></div>
+
+    <iframe class="gmap_iframe" width="400px" height='400px' frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=Biju pattanaik international airport&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+           
     <footer>
        Page designed by <a href='//sudipta1254.github.io/linkline'>Sudipto</a> <br>
        Data provided by
