--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <title>AviaWeather</title>
 </head>
-<body onload='awc()' oncontextmenu='return false'>
+<body oncontextmenu='return false'>
     <div class='header'>
         <p>METAR & TAF</p>
         <span class="fa-solid fa-info" onclick="info()"></span>
