--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
        <label for='info'>INFO</label>
        <input type='radio' id='info' name='same'>
+
+       <label for='avwx'>AVWX</label>
+       <input type='checkbox' id='avwx'>
     </div>
     <div class='d3'>
        <p></p>
@@ -83,7 +86,8 @@
         Raw: <strong></strong> <hr>
     </div>
     <div class='d6'></div>
-
+    <div class='d7'></div>
+           
     <iframe width="400px" height='400px' frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=Biju pattanaik international airport&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
            
     <footer>
