--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
        Page designed by <a href='//sudipta1254.github.io/linkline'>Sudipto</a> <br>
        Data provided by
        <a href='//beta.aviationweather.gov'>AWC</a>, 
-       <a href='//checkwxapi.com'>CheckWX</a> amp;
+       <a href='//checkwxapi.com'>CheckWX</a> &
        <a href='//avwx.rest'>AVWX</a>
     </footer>
     <script src="script.js"></script>
