--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Aviation, Weather, Forecast, Service, AWC, CheckWX, API, VFR, MVFR, IFR, LIFR, Climate, Data, Rain, Raining, Snow">
     <meta name="description" content="Get aviation weather data.">
     <script src="https://kit.fontawesome.com/a26a0964b9.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="style.css">
     <title>AviaWeather</title>
