--- a/index.html
+++ b/index.html
@@ -44,47 +44,47 @@
     </div>
     <div class='d3'>
        <p></p>
-       Type: <strong></strong> <br>
-       Airport: <strong></strong> <br>
-       ICAO Code: <strong></strong> <br>
-       Reported: <strong></strong> <br>
-       Temperature: <strong></strong> <br>
-       Dewpoint: <strong></strong> <br>
-       Wind: <strong></strong> <br>
-       Visibility: <strong></strong> <br>
-       Pressure: <strong></strong> <br>
-       Condition: <strong></strong> <br>
-       Clouds: <strong></strong> <br>
-       Raw: <strong></strong> <hr>
+       Type: <b></b> <br>
+       Airport: <b></b> <br>
+       ICAO Code: <b></b> <br>
+       Reported: <b></b> <br>
+       Temperature: <b></b> <br>
+       Dewpoint: <b></b> <br>
+       Wind: <b></b> <br>
+       Visibility: <b></b> <br>
+       Pressure: <b></b> <br>
+       Condition: <b></b> <br>
+       Clouds: <b></b> <br>
+       Raw: <b></b> <hr>
     </div>
 
     <div class='d4'>
        <p></p>
-       Type: <strong></strong> <br>
-       Airport: <strong></strong> <br>
-       ICAO Code: <strong></strong> <br>
-       Reported: <strong></strong> <br>
-       Temperature: <strong></strong> <br>
-       Dewpoint: <strong></strong> <br>
-       Humidity: <strong></strong> <br>
-       Wind: <strong></strong> <br>
-       Visibility: <strong></strong> <br>
-       Pressure: <strong></strong> <br>
-       Condition: <strong></strong> <br>
-       Clouds: <strong></strong> <br>
-       Raw: <strong></strong> <br>
-       Flight Category: <strong></strong> <div id='fl'></div> <hr>
+       Type: <b></b> <br>
+       Airport: <b></b> <br>
+       ICAO Code: <b></b> <br>
+       Reported: <b></b> <br>
+       Temperature: <b></b> <br>
+       Dewpoint: <b></b> <br>
+       Humidity: <b></b> <br>
+       Wind: <b></b> <br>
+       Visibility: <b></b> <br>
+       Pressure: <b></b> <br>
+       Condition: <b></b> <br>
+       Clouds: <b></b> <br>
+       Raw: <b></b> <br>
+       Flight Category: <b></b> <div id='fl'></div> <hr>
     </div>
     <div class='d5'>
         <p></p>
-        Type: <strong></strong> <br>
-        Remark: <strong></strong> <br>
-        Airport: <strong></strong> <br>
-        ICAO Code: <strong></strong> <br>
-        Issued: <strong></strong> <br>
-        Span: <strong></strong> <br>
-        <strong></strong> <br>
-        Raw: <strong></strong> <hr>
+        Type: <b></b> <br>
+        Remark: <b></b> <br>
+        Airport: <b></b> <br>
+        ICAO Code: <b></b> <br>
+        Issued: <b></b> <br>
+        Span: <b></b> <br>
+        <b></b> <br>
+        Raw: <b></b> <hr>
     </div>
     <div class='d6'></div>
     <div class='d7'></div>
