--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
     </div>
     <div class='d6'></div>
     <div class='d7'></div>
-           
+
+    <div class='d8'>
+       <label for='map'>Show/Hide Map
+       <input id='map' type='checkbox'>
+    </div>
     <iframe width="400px" height='400px' frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=Biju pattanaik international airport&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
            
     <footer>
