--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div id='d1'>
        <div class='tooltip'>
-           <input type='text' id='inp' placeholder='Enter Airport Id'>
+           <input type='search' minlength='3' id='inp' placeholder='Enter Airport Id'>
               <span class="tooltiptext" id="myTooltip">Enter ICAO followed by hours to get history '[query]2'</span>
            </input>
        </div>
