--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <footer>
        Page designed by <a href='//sudipta1254.github.io/linkline'>Sudipto</a> <br>
        Data provided by
-       <a href='//beta.aviationweather.gov'>AWC</a>, 
+       <a href='//aviationweather.gov'>AWC</a>, 
        <a href='//checkwxapi.com'>CheckWX</a> &
        <a href='//avwx.rest'>AVWX</a>
     </footer>
