--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     <footer>
        Page designed by <a href='//sudipta1254.github.io/linkline'>Sudipto</a> <br>
        Data provided by
-       <a href='//aviationweather.gov'>AWC</a>, 
-       <a href='//checkwxapi.com'>CheckWX</a> &
-       <a href='//avwx.rest'>AVWX</a>
+       <a href='//aviationweather.gov' target="_blank">AWC</a>, 
+       <a href='//checkwxapi.com' target="_blank">CheckWX</a> &
+       <a href='//avwx.rest' target="_blank">AVWX</a>
     </footer>
     <script src="script.js"></script>
 <body>
