--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
        <input type='radio' id='taf' name='same'>
 
        <label for='awc'>AWC
-       <input type='checkbox' id='awc' checked>
+       <input type='checkbox' id='awc'>
        <label for='cwx'>CWX
-       <input type='checkbox' id='cwx'>
+       <input type='checkbox' id='cwx' checked>
 
        <label for='info'>INFO</label>
        <input type='radio' id='info' name='same'>
