--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <title>AviaWeather</title>
 </head>
-<body bgcolor="yellow">
+<body>
     <div class='header'>
         <p>METAR & TAF</p>
         <span class="fa-solid fa-info" onclick="info()"></span>
