--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
    </div>
    <div id='d1'>
       <div class='tooltip'>
-           <input type='search' minlength='3' id='inp' placeholder='Enter Airport Id' >
-              <span class="tooltiptext" id="myTooltip">Enter ICAO followed by hours to get history '[query]2'</span>
-           </input>
+         <input type='search' minlength='3' id='inp' placeholder='Enter Airport Id' autofocus>
+            <span class="tooltiptext" id="myTooltip">Enter ICAO followed by hours to get history '[query]2'</span>
+         </input>
       </div>
       <button onclick='get()'> Search </button>
    </div>
