--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
    <div class='header'>
-      <p>METAR & TAF</p>
+      <p>AviaWeather</p>
       <span class="fa-solid fa-info" onclick="info()"></span>
    </div>
    <div id='d1'>
